--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -33,7 +33,7 @@ body {
   line-height: 1.5;
   font-family: sans-serif;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: hidden;
   font-family: 'Source Sans Pro', sans-serif;
   
 }
