--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,8 +13,7 @@
 @import 'components/footer';
 @import 'components/skills';
 @import 'components/mouse-scroll';
-
-
+@import 'components/loader';
 
 
 
